--- a/.github/workflows/pages.yaml
+++ b/.github/workflows/pages.yaml
@@ -33,7 +33,8 @@ jobs:
       - name: Build
         run: npm run build
         env:
-          VITE_API_BASE_URL: ${{ vars.VITE_API_BASE_URL }}
+          VITE_API_BASE_URL: https://testanalyser.103.125.154.215.nip.io
+          VITE_API_URL: https://testanalyser.103.125.154.215.nip.io
           VITE_BASE_PATH: /${{ github.event.repository.name }}/
 
       - name: SPA fallback
