Removed .scraper from .gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -20,6 +20,8 @@ server/.scraper
 *.db-journal
 *.db-wal
 *.db-shm
+!*/.scraper
+
 # Editor directories and files
 .vscode/*
 !.vscode/extensions.json
